Update Python template with better auto-formatting, venv management, VSCode support

--- a/templates/python3/Makefile
+++ b/templates/python3/Makefile
@@ -15,7 +15,10 @@ help:
 setup:
 	pipenv install --dev
 
+# TODO: Consider moving these settings to pyproject.toml and .flake8
 lint:
+	pipenv run python3 -m isort app/ tests/
+	pipenv run python3 -m black app/ tests/ --exclude .venv/ --line-length 100
 	pipenv run python3 -m mypy app/ tests/ --ignore-missing-imports
 	# E121: continuation line under-indented for hanging indent
  	# E127: continuation line over-indented for visual indent
@@ -23,7 +26,7 @@ lint:
 	# W292: newline at end of file
 	# W293: blank lines containing whitespace
 	# W504 line break after binary operator
-	pipenv run python3 -m flake8 --ignore E121,E127,W291,W292,W293,W504
+	pipenv run python3 -m flake8 app/ tests/ --ignore E121,E127,W291,W292,W293,W504
 
 test: lint
 	pipenv run python3 -m pytest
