--- a/templates/python3/Pipfile
+++ b/templates/python3/Pipfile
@@ -4,12 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
+requests = "==2.28.1"
 
 [dev-packages]
-flake8 = "*"
-pytest = "*"
-mypy = "*"
+black = "==22.10.0"
+isort = "==5.10.1"
+flake8 = "==6.0.0"
+pytest = "==7.2.0"
+mypy = "==0.991"
 
 [requires]
-python_version = "3"
+python_version = "3.8"
